# nonebot-plugin-remake

./: README.md  pyproject.toml
nonebot_plugin_remake/: __init__.py  age.py  config.py  drawer.py  event.py  life.py  property.py  talent.py  utils.py
nonebot_plugin_remake/resources/: age.json  events.json
nonebot_plugin_remake/resources/data/: age.json
