[tool.poetry]
name = "nonebot_plugin_remake"
version = "0.3.3"
description = "适用于 Nonebot2 的人生重开模拟器插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-remake"
repository = "https://github.com/noneplugin/nonebot-plugin-remake"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = ">=9.2.0,<11.0.0"
nonebot2 = "^2.0.0"
nonebot-plugin-send-anything-anywhere = "^0.3.0"
nonebot-adapter-onebot = { version = "^2.2.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
